--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,12 +37,13 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["langgraph.templates.react_agent", "react_agent", "meta_agent", "meta_agent_v2"]
+packages = ["langgraph.templates.react_agent", "react_agent", "meta_agent", "meta_agent_v2", "meta_agent_v3"]
 [tool.setuptools.package-dir]
 "langgraph.templates.react_agent" = "src/react_agent"
 "react_agent" = "src/react_agent"
 "meta_agent" = "src/meta_agent"
 "meta_agent_v2" = "src/meta_agent_v2"
+"meta_agent_v3" = "src/meta_agent_v3"
 
 
 [tool.setuptools.package-data]
