--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "sse-starlette>=2.1.3",
     "grpcio-tools>=1.75.1",
     "jsonschema-rs>=0.29.1",
+    "jinja2>=3.1.0",
 ]
 
 
@@ -49,6 +50,7 @@ packages = ["langgraph.templates.react_agent", "react_agent", "meta_agent", "met
 
 [tool.setuptools.package-data]
 "*" = ["py.typed"]
+"meta_agent_v4" = ["templates/*.j2"]
 
 [tool.ruff]
 lint.select = [
